--- a/.gitignore
+++ b/.gitignore
@@ -43,3 +43,6 @@ public/uploads
 .elasticbeanstalk/*
 !.elasticbeanstalk/*.cfg.yml
 !.elasticbeanstalk/*.global.yml
+
+# Ignore Dotenv variables.
+.env
