--- a/.ebextensions/04-client_max_body_size.config
+++ b/.ebextensions/04-client_max_body_size.config
@@ -1,7 +1,22 @@
 files:
-    /etc/nginx/conf.d/elasticbeanstalk/max_body_size.conf:
-        mode: "000755"
-        owner: root
-        group: root
-        content: |
-           client_max_body_size 20M;
+  "/etc/nginx/conf.d/elasticbeanstalk/max_body_size.conf" :
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      client_max_body_size 30M;
+
+  "/home/ec2-user/myfile2" :
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      this is my
+      file content
+
+  "/var/proxy/staging/nginx/conf.d/elasticbeanstalk/max.conf"
+    mode: "000755"
+    owner: root
+    group: root
+    content: |
+      client_max_body_size 33M;
