--- a/.ebextensions/04-client_max_body_size.config
+++ b/.ebextensions/04-client_max_body_size.config
@@ -6,7 +6,7 @@ files:
     content: |
       client_max_body_size 30M;
 
-  "/home/ec2-user/myfile2" :
+  "/home/ec2-user/test_file22" :
     mode: "000755"
     owner: root
     group: root
@@ -14,7 +14,7 @@ files:
       this is my
       file content
 
-  "/var/proxy/staging/nginx/conf.d/elasticbeanstalk/max.conf"
+  "/var/proxy/staging/nginx/conf.d/elasticbeanstalk/max.conf" :
     mode: "000755"
     owner: root
     group: root
