--- a/config/storage.yml
+++ b/config/storage.yml
@@ -6,6 +6,12 @@ local:
   service: Disk
   root: <%= Rails.root.join("storage") %>
 
+amazon:
+  service: S3
+  access_key_id: <%= ENV.fetch("AWS_ACCESS_KEY_ID") %>
+  secret_access_key: <%= ENV.fetch("AWS_SECRET_ACCESS_KEY") %>
+  region: <%= ENV.fetch("AWS_S3_REGION") { "eu-central-1" } %>
+  bucket: <%= ENV.fetch("AWS_S3_BUCKET_NAME") %>
 
 # Remember not to checkin your GCS keyfile to a repository
 # google:
