--- a/.gitignore
+++ b/.gitignore
@@ -27,6 +27,9 @@
 /public/assets
 .byebug_history
 
+public/sw.js
+public/sw.js.map
+
 # Ignore master key for decrypting credentials and more.
 /config/master.key
 /config/deploy.rb
