change default password policy for development

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -164,6 +164,13 @@ development:
     developer:
       enabled: true
       icon: phone
+  decidim:
+    <<: *decidim_default
+    admin_password:
+      expiration_days: 500
+      min_length: 5
+      repetition_times: 0
+      strong: <%= Decidim::Env.new("DECIDIM_ADMIN_PASSWORD_STRONG", true).to_boolean_string %>
 
 test:
   <<: *default
