--- a/package.json
+++ b/package.json
@@ -2,10 +2,10 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "@decidim/browserslist-config": "^0.27.5",
-    "@decidim/core": "^0.27.5",
-    "@decidim/elections": "^0.27.5",
-    "@decidim/webpacker": "^0.27.5",
+    "@decidim/browserslist-config": "^0.28.6",
+    "@decidim/core": "^0.28.6",
+    "@decidim/elections": "^0.28.6",
+    "@decidim/webpacker": "^0.28.6",
     "graphql-ws": ">= 4.5.0"
   },
   "version": "0.1.0",
@@ -18,9 +18,10 @@
     "extends @decidim/browserslist-config"
   ],
   "devDependencies": {
-    "@decidim/dev": "^0.27.5",
-    "@decidim/eslint-config": "^0.27.5",
-    "@decidim/stylelint-config": "^0.27.5",
+    "@decidim/dev": "^0.28.6",
+    "@decidim/eslint-config": "^0.28.6",
+    "@decidim/prettier-config": "^0.28.6",
+    "@decidim/stylelint-config": "^0.28.6",
     "webpack-dev-server": "^4.15.1"
   }
 }
