--- a/babel.config.json
+++ b/babel.config.json
@@ -11,6 +11,7 @@
     ["@babel/preset-react"]
   ],
   "plugins": [
+    "@babel/plugin-transform-class-properties",
     "@babel/plugin-transform-classes",
     [
       "@babel/plugin-transform-runtime",
