upgrade / update gems to 0.29.7
upgrade / js config

--- a/config/shakapacker.yml
+++ b/config/shakapacker.yml
@@ -62,6 +62,8 @@ development:
       #  port: 8080
     # Should we use gzip compression?
     compress: true
+    # Disable live reloading for faster development experience
+    live_reload: false
     # Note that apps that do not check the host are vulnerable to DNS rebinding attacks
     allowed_hosts: "all"
     pretty: true
@@ -75,6 +77,18 @@ test:
   <<: *default
   compile: true
   public_output_path: packs-test
+
+staging:
+  <<: *default
+
+  # Production depends on precompilation of packs prior to booting for performance.
+  compile: false
+
+  # Use content hash for naming assets. Cannot be overridden by for production.
+  useContentHash: true
+
+  # Cache manifest.json for performance
+  cache_manifest: true
 
 production:
   <<: *default
