--- a/package.json
+++ b/package.json
@@ -4,19 +4,24 @@
   "dependencies": {
     "@decidim/browserslist-config": "^0.29.7",
     "@decidim/core": "^0.29.7",
-    "@decidim/elections": "^0.28.6",
     "@decidim/webpacker": "^0.29.7",
-    "graphql-ws": ">= 4.5.0"
+    "@rails/activestorage": "^8.0.200",
+    "graphql-ws": "^6.0.3",
+    "js-beautify": "^1.15.4"
   },
   "version": "0.1.0",
   "browserslist": [
     "extends @decidim/browserslist-config"
   ],
+  "engines": {
+    "node": "18.17.1",
+    "npm": "9.6.7",
+    "yarn": "~1.22.1"
+  },
   "devDependencies": {
     "@decidim/dev": "^0.29.7",
     "@decidim/eslint-config": "^0.29.7",
     "@decidim/prettier-config": "^0.29.7",
-    "@decidim/stylelint-config": "^0.29.7",
-    "webpack-dev-server": "^4.15.1"
+    "@decidim/stylelint-config": "^0.29.7"
   }
 }
