--- a/package.json
+++ b/package.json
@@ -2,10 +2,11 @@
   "name": "app",
   "private": true,
   "dependencies": {
-    "@decidim/browserslist-config": "^0.29.7",
-    "@decidim/core": "^0.29.7",
-    "@decidim/webpacker": "^0.29.7",
+    "@decidim/browserslist-config": "^0.30.0",
+    "@decidim/core": "^0.30.0",
+    "@decidim/webpacker": "^0.30.0",
     "@rails/activestorage": "^8.0.200",
+    "core-js": "^3.48.0",
     "graphql-ws": "^6.0.3",
     "js-beautify": "^1.15.4"
   },
@@ -19,9 +20,9 @@
     "yarn": "~1.22.1"
   },
   "devDependencies": {
-    "@decidim/dev": "^0.29.7",
-    "@decidim/eslint-config": "^0.29.7",
-    "@decidim/prettier-config": "^0.29.7",
-    "@decidim/stylelint-config": "^0.29.7"
+    "@decidim/dev": "^0.30.0",
+    "@decidim/eslint-config": "^0.30.0",
+    "@decidim/prettier-config": "^0.30.0",
+    "@decidim/stylelint-config": "^0.30.0"
   }
 }
