update SMTP config for staging

--- a/config/secrets.yml
+++ b/config/secrets.yml
@@ -221,8 +221,8 @@ staging:
   smtp_address: <%= ENV["SMTP_ADDRESS"] %>
   smtp_domain: <%= ENV["SMTP_DOMAIN"] %>
   smtp_port: <%= Decidim::Env.new("SMTP_PORT", 587).to_i %>
-  smtp_starttls_auto: true
-  smtp_tls: true
+  smtp_starttls_auto: <%= Decidim::Env.new("SMTP_STARTTLS_AUTO").to_boolean_string %>
+  smtp_tls: <%= Decidim::Env.new("SMTP_TLS").to_boolean_string %>
   smtp_authentication: <%= Decidim::Env.new("SMTP_AUTHENTICATION", "plain").to_s %>
 
 # Do not keep production secrets in the repository,
